--- a/staruml-generator/src/generator/Generator.dproj
+++ b/staruml-generator/src/generator/Generator.dproj
@@ -2,7 +2,7 @@
 		<PropertyGroup>
 			<ProjectGuid>{22D746AE-94D0-4F01-B1FA-AF8DD923FB25}</ProjectGuid>
 			<MainSource>Generator.dpr</MainSource>
-			<Config Condition="'$(Config)'==''">Debug</Config>
+			<Config Condition="'$(Config)'==''">Release</Config>
 			<DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
 			<ProjectVersion>12.0</ProjectVersion>
 		</PropertyGroup>
@@ -21,7 +21,7 @@
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
 			<DCC_DebugDCUs>true</DCC_DebugDCUs>
-			<DCC_UnitSearchPath>..\..\..\staruml\components\plastic-components\src;..\..\..\staruml\src;C:\JS\Delphi\Inspector\Inspector;C:\JS\Delphi\Inspector\InPlaceEditor;C:\JS\Delphi\ShellShock\phpeditoride-st_tpshellshock\st_tpshellshock\source;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+			<DCC_UnitSearchPath>..\..\..\staruml\components\plastic-components\src;..\..\..\staruml\src;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
 			<DCC_UsePackage>vclx;vcl;vclimg;dbrtl;Rave77VCL;bdertl;rtl;vclactnband;xmlrtl;vcldb;vcldbx;vcltouch;dsnap;dsnapcon;TeeUI;TeeDB;Tee;vclib;ibxpress;adortl;IndyCore;IndySystem;IndyProtocols;inet;intrawebdb_100_140;Intraweb_100_140;VclSmp;vclie;inetdb;webdsnap;websnap;inetdbbde;inetdbxpress;soaprtl;vclribbon;DbxCommonDriver;DbxClientDriver;DBXInterBaseDriver;DBXMySQLDriver;dbexpress;dbxcds;TMSSmoothControlsPackPkgD2010;tb2k_d12;elpackD7;adgrm2010;JclDeveloperTools;Jcl;JclVcl;JclContainers;JvDocking;JvCore;JvRuntimeDesign;JvSystem;JvStdCtrls;JvControls;JvBands;JvDB;JvDlgs;JvBDE;JvCmp;JvCrypt;JvCustom;JvMM;JvNet;JvPascalInterpreter;JvPageComps;JvWizards;vclshlctrls;SynEdit_R2010;PlasticComponents;VirtualTreesR;dacvcl140;dac140;crcontrols140;unidacvcl140;unidac140;DSPackR;DirectX9_;dxCoreRS14;cxLibraryRS14;dxGDIPlusRS14;dxThemeRS14;cxPageControlRS14;dxBarRS14;dxComnRS14;dxBarExtDBItemsRS14;dxBarExtItemsRS14;dxBarDBNavRS14;dxRibbonRS14;dxTabbedMDIRS14;dxmdsRS14;dxDockingRS14;cxPageControldxBarPopupMenuRS14;NxCollectionDsgn_d2010;NxCollectionRun_d2010;NxCommonRun_d2010;NxCommonDsgn_d2010;NxDBGridDsgn_d2010;NxDBGridRun_d2010;NxGridDsgn_d2010;NxGridRun_d2010;NxInspectorDsgn_d2010;NxInspectorRun_d2010;NxAddonsRun_d2010</DCC_UsePackage>
 			<DCC_ExeOutput>..\..\deploy\staruml-generator</DCC_ExeOutput>
 			<DCC_DependencyCheckOutputName>..\..\deploy\staruml-generator\Generator.dll</DCC_DependencyCheckOutputName>
@@ -130,25 +130,25 @@
 						<VersionInfo Name="AutoIncBuild">False</VersionInfo>
 						<VersionInfo Name="MajorVer">1</VersionInfo>
 						<VersionInfo Name="MinorVer">0</VersionInfo>
-						<VersionInfo Name="Release">1</VersionInfo>
+						<VersionInfo Name="Release">2</VersionInfo>
 						<VersionInfo Name="Build">45</VersionInfo>
 						<VersionInfo Name="Debug">False</VersionInfo>
 						<VersionInfo Name="PreRelease">False</VersionInfo>
 						<VersionInfo Name="Special">False</VersionInfo>
 						<VersionInfo Name="Private">False</VersionInfo>
 						<VersionInfo Name="DLL">False</VersionInfo>
-						<VersionInfo Name="Locale">1042</VersionInfo>
-						<VersionInfo Name="CodePage">949</VersionInfo>
+						<VersionInfo Name="Locale">1033</VersionInfo>
+						<VersionInfo Name="CodePage">1252</VersionInfo>
 					</VersionInfo>
 					<VersionInfoKeys>
-						<VersionInfoKeys Name="CompanyName">Plastic Software, Inc.</VersionInfoKeys>
+						<VersionInfoKeys Name="CompanyName"/>
 						<VersionInfoKeys Name="FileDescription"/>
-						<VersionInfoKeys Name="FileVersion">1.0.1.45</VersionInfoKeys>
+						<VersionInfoKeys Name="FileVersion">1.0.2.45</VersionInfoKeys>
 						<VersionInfoKeys Name="InternalName"/>
-						<VersionInfoKeys Name="LegalCopyright">Copyright(c)1998-2005 Plastic Software, Inc. All rights reserved.</VersionInfoKeys>
+						<VersionInfoKeys Name="LegalCopyright"/>
 						<VersionInfoKeys Name="LegalTrademarks"/>
 						<VersionInfoKeys Name="OriginalFilename"/>
-						<VersionInfoKeys Name="ProductName">Agora Generator</VersionInfoKeys>
+						<VersionInfoKeys Name="ProductName">Documentation  Generator</VersionInfoKeys>
 						<VersionInfoKeys Name="ProductVersion">1.0</VersionInfoKeys>
 						<VersionInfoKeys Name="Comments"/>
 					</VersionInfoKeys>
